[package]
name = "runes"
version = "0.1.1"
authors = ["Andrew <andrew@canonic.xyz>"]
repository = "https://github.com/symbolsai/runes"
description = "A collection of helpers for the Bitcoin rune protocol, targeting NodeJS."
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.22", features = ["console"]}


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
ordinals = "0.0.8"
bitcoin = "0.30.2"
hex = "0.4.3"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
